<resources>
    <string name="app_name">SensorMonitoring</string>

    <string name="sensor">Sensor Type</string>
    <string name="accuracy">Accuracy</string>
    <string name="value">Value Got</string>
    <string name="presence"> Y or N</string>

    <string name="accelerometer">Accelerometer</string>
    <string name="magneticField">Magnetic Field</string>
    <string name="gravity">Gravity</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="light">Light</string>
    <string name="proximity">Proximity</string>
    <string name="linearAcc">Linear Acc</string>
    <string name="rotationalAcc">Rotational Vector</string>
    <string name="gameRotational">Game Rotational</string>
    <string name="significantMotion">Motion</string>
    <string name="stepDetect">Step Detector</string>
    <string name="stepCounter">Step Counter</string>
    <string name="hingeAngle">Hinge Angle</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="temperature">Temperature</string>
    <string name="pose">Pose 6DOF</string>

</resources>